; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_network_agent.c_netagent_post_updated_interfaces.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_network_agent.c_netagent_post_updated_interfaces.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.netagent_wrapper = type { i32 }

@netagent_lock = common dso_local global i32 0, align 4
@KEV_NETAGENT_UPDATED_INTERFACES = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@LOG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"Interface event with no associated agent\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @netagent_post_updated_interfaces(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.netagent_wrapper*, align 8
  store i32 %0, i32* %2, align 4
  store %struct.netagent_wrapper* null, %struct.netagent_wrapper** %3, align 8
  %4 = call i32 @lck_rw_lock_shared(i32* @netagent_lock)
  %5 = load i32, i32* %2, align 4
  %6 = call %struct.netagent_wrapper* @netagent_find_agent_with_uuid(i32 %5)
  store %struct.netagent_wrapper* %6, %struct.netagent_wrapper** %3, align 8
  %7 = call i32 @lck_rw_done(i32* @netagent_lock)
  %8 = load %struct.netagent_wrapper*, %struct.netagent_wrapper** %3, align 8
  %9 = icmp ne %struct.netagent_wrapper* %8, null
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* @KEV_NETAGENT_UPDATED_INTERFACES, align 4
  %13 = load i32, i32* @TRUE, align 4
  %14 = call i32 @netagent_post_event(i32 %11, i32 %12, i32 %13)
  br label %18

15:                                               ; preds = %1
  %16 = load i32, i32* @LOG_DEBUG, align 4
  %17 = call i32 @NETAGENTLOG0(i32 %16, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  br label %18

18:                                               ; preds = %15, %10
  ret void
}

declare dso_local i32 @lck_rw_lock_shared(i32*) #1

declare dso_local %struct.netagent_wrapper* @netagent_find_agent_with_uuid(i32) #1

declare dso_local i32 @lck_rw_done(i32*) #1

declare dso_local i32 @netagent_post_event(i32, i32, i32) #1

declare dso_local i32 @NETAGENTLOG0(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
